--- a/arch/arm64/configs/a53x_defconfig
+++ b/arch/arm64/configs/a53x_defconfig
@@ -525,11 +525,11 @@ CONFIG_ARCH_ENABLE_THP_MIGRATION=y
 #
 # Hypervisor
 #
-CONFIG_UH=y
-CONFIG_RKP=y
-CONFIG_KDP=y
-CONFIG_KDP_CRED=y
-CONFIG_KDP_NS=y
+# CONFIG_UH is not set
+# CONFIG_RKP is not set
+# CONFIG_KDP is not set
+# CONFIG_KDP_CRED is not set
+# CONFIG_KDP_NS is not set
 # end of Hypervisor
 
 #
@@ -1493,7 +1493,7 @@ CONFIG_VIRTIO_VSOCKETS_COMMON=y
 # CONFIG_NET_L3_MASTER_DEV is not set
 # CONFIG_QRTR is not set
 # CONFIG_NET_NCSI is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -7150,8 +7150,7 @@ CONFIG_SEC_KQ_MESH=m
 #
 # samsung Performace manager
 #
-CONFIG_KPERFMON=y
-CONFIG_KPERFMON_BUILD=m
+# CONFIG_KPERFMON is not set
 # end of samsung Performace manager
 
 CONFIG_VIBRATOR_VIB_INFO=m
@@ -7628,11 +7627,11 @@ CONFIG_SECURITY_SELINUX_SID2STR_CACHE_SIZE=256
 # CONFIG_SECURITY_YAMA is not set
 # CONFIG_SECURITY_SAFESETID is not set
 # CONFIG_SECURITY_LOCKDOWN_LSM is not set
-CONFIG_INTEGRITY=y
-CONFIG_INTEGRITY_SIGNATURE=y
-CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
-CONFIG_INTEGRITY_TRUSTED_KEYRING=y
-CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_INTEGRITY is not set
+# CONFIG_INTEGRITY_SIGNATURE is not set
+# CONFIG_INTEGRITY_ASYMMETRIC_KEYS is not set
+# CONFIG_INTEGRITY_TRUSTED_KEYRING is not set
+# CONFIG_INTEGRITY_AUDIT is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
@@ -7660,16 +7659,14 @@ CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 # end of Memory initialization
 # end of Kernel hardening options
 
-CONFIG_SECURITY_DEFEX=y
+# CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
 # CONFIG_SECURITY_DEFEX_USER is not set
-CONFIG_PROCA=y
-CONFIG_PROCA_GKI_10=y
-CONFIG_PROCA_S_OS=y
-CONFIG_PROCA_CERTIFICATES_XATTR=y
+# CONFIG_PROCA is not set
+# CONFIG_PROCA_GKI_10 is not set
+# CONFIG_PROCA_S_OS is not set
+# CONFIG_PROCA_CERTIFICATES_XATTR is not set
 # CONFIG_PROCA_CERTIFICATES_DB is not set
-CONFIG_PROCA_CERT_ENG="x509_proca_eng.der"
-CONFIG_PROCA_CERT_USER="x509_proca_user.der"
 CONFIG_GAF=y
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
@@ -7677,16 +7674,14 @@ CONFIG_GAF=y
 CONFIG_GAF_V6=y
 # CONFIG_MEMORY_ZEROISATION is not set
 # CONFIG_MZ_PAGE_V2 is not set
-CONFIG_FIVE=y
-CONFIG_FIVE_GKI_10=y
+# CONFIG_FIVE is not set
+# CONFIG_FIVE_GKI_10 is not set
 # CONFIG_FIVE_GKI_20 is not set
 # CONFIG_FIVE_DEBUG is not set
-CONFIG_FIVE_CERT_USER="x509_five_user.der"
-CONFIG_FIVE_DEFAULT_HASH_SHA1=y
+# CONFIG_FIVE_DEFAULT_HASH_SHA1 is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
-CONFIG_FIVE_DEFAULT_HASH="sha1"
-CONFIG_FIVE_TRUSTED_KEYRING=y
+# CONFIG_FIVE_TRUSTED_KEYRING is not set
 # end of Security options
 
 CONFIG_CRYPTO=y
