defconfig: disable CONFIG_CRYPTO_FIPS

--- a/arch/arm64/configs/s5e8825-a53xxx_defconfig
+++ b/arch/arm64/configs/s5e8825-a53xxx_defconfig
@@ -7694,8 +7694,8 @@ CONFIG_CRYPTO=y
 #
 # Crypto core or helper
 #
-CONFIG_CRYPTO_FIPS=y
-CONFIG_CRYPTO_FIPS140=y
+# CONFIG_CRYPTO_FIPS is not set
+# CONFIG_CRYPTO_FIPS140 is not set
 # CONFIG_CRYPTO_FIPS140_MOD is not set
 CONFIG_CRYPTO_ALGAPI=y
 CONFIG_CRYPTO_ALGAPI2=y
@@ -7861,9 +7861,7 @@ CONFIG_CRYPTO_DEV_ALLWINNER=y
 # CONFIG_CRYPTO_DEV_CCREE is not set
 # CONFIG_CRYPTO_DEV_HISI_SEC is not set
 # CONFIG_CRYPTO_DEV_AMLOGIC_GXL is not set
-CONFIG_EXYNOS_FMP=m
-CONFIG_EXYNOS_FMP_FIPS=y
-CONFIG_EXYNOS_FMP_INTEGRITY_TEST=y
+# CONFIG_EXYNOS_FMP is not set
 # CONFIG_NODE_FOR_SELFTEST_FAIL is not set
 CONFIG_PANIC_FOR_SELFTEST_FAIL=y
 # CONFIG_EXYNOS_FMP_SIMULATOR is not set
