configs/drivers: Disable all sec_debug related stuff

--- a/arch/arm64/configs/a53x_defconfig
+++ b/arch/arm64/configs/a53x_defconfig
@@ -7059,45 +7059,45 @@ CONFIG_SUPPORT_PANEL_DECODER_TEST=y
 # CONFIG_SUPPORT_PANEL_VCOM_TRIM_TEST is not set
 CONFIG_SEC_VIBRATOR=m
 # CONFIG_SEC_VIB_NOTIFIER is not set
-CONFIG_SEC_DEBUG_BASE=m
-CONFIG_SEC_DEBUG_BASE_BUILT_IN=y
-CONFIG_SEC_DEBUG_AUTO_COMMENT=y
-CONFIG_SEC_DEBUG_MODE=m
-CONFIG_SEC_DEBUG_EXTRA_INFO=m
-CONFIG_SEC_DEBUG_EXTRA_INFO_BUILT_IN=y
-CONFIG_SEC_DEBUG_HW_PARAM=m
-CONFIG_SEC_DEBUG_RESET_REASON=m
-CONFIG_SEC_DEBUG_MEMTAB=y
+# CONFIG_SEC_DEBUG_BASE is not set
+# CONFIG_SEC_DEBUG_BASE_BUILT_IN is not set
+# CONFIG_SEC_DEBUG_AUTO_COMMENT is not set
+# CONFIG_SEC_DEBUG_MODE is not set
+# CONFIG_SEC_DEBUG_EXTRA_INFO is not set
+# CONFIG_SEC_DEBUG_EXTRA_INFO_BUILT_IN is not set
+# CONFIG_SEC_DEBUG_HW_PARAM is not set
+# CONFIG_SEC_DEBUG_RESET_REASON is not set
+# CONFIG_SEC_DEBUG_MEMTAB is not set
 # CONFIG_SEC_DEBUG_SYSRQ_KMSG is not set
-CONFIG_SEC_DEBUG_PRINT_PCLR=y
-CONFIG_SEC_DEBUG_BUG_ON_SLUB_CORRUPTION=y
-CONFIG_SEC_DEBUG_AVOID_UNNECESSARY_TRAP=y
-CONFIG_SEC_DEBUG_WORKQUEUE_LOCKUP_PANIC=y
-CONFIG_SEC_DEBUG_EXCEPTION_STACK=y
-CONFIG_SEC_DEBUG_WATCHDOGD_FOOTPRINT=m
-CONFIG_SEC_DEBUG_LOCKUP_INFO=y
+# CONFIG_SEC_DEBUG_PRINT_PCLR is not set
+# CONFIG_SEC_DEBUG_BUG_ON_SLUB_CORRUPTION is not set
+# CONFIG_SEC_DEBUG_AVOID_UNNECESSARY_TRAP is not set
+# CONFIG_SEC_DEBUG_WORKQUEUE_LOCKUP_PANIC is not set
+# CONFIG_SEC_DEBUG_EXCEPTION_STACK is not set
+# CONFIG_SEC_DEBUG_WATCHDOGD_FOOTPRINT is not set
+# CONFIG_SEC_DEBUG_LOCKUP_INFO is not set
 # CONFIG_SEC_DEBUG_BAD_STACK_CAREFULLY is not set
 # CONFIG_SEC_DEBUG_FPSIMD_CHECK_CONTEXT is not set
-CONFIG_SEC_DEBUG_UNFROZEN_TASK=y
-CONFIG_SEC_DEBUG_FAULT_MSG_ADV=y
-CONFIG_SEC_DEBUG_EMERG_WDT_CALLER=y
+# CONFIG_SEC_DEBUG_UNFROZEN_TASK is not set
+# CONFIG_SEC_DEBUG_FAULT_MSG_ADV is not set
+# CONFIG_SEC_DEBUG_EMERG_WDT_CALLER is not set
 # CONFIG_SEC_DEBUG_BAD_STACK_INFO is not set
-CONFIG_SEC_DEBUG_DTASK=m
-CONFIG_SEC_DEBUG_PM_DEVICE_INFO=y
-CONFIG_SEC_DEBUG_TASK_IN_STATE_INFO=y
-CONFIG_SEC_DEBUG_SOFTDOG_PWDT=m
-CONFIG_SEC_DEBUG_SCHED_INFO=m
-CONFIG_SEC_DEBUG_WQ_LOCKUP_INFO=m
-CONFIG_SEC_DEBUG_SOFTDOG=m
-CONFIG_SEC_DEBUG_QSPIN_OWNER=y
+# CONFIG_SEC_DEBUG_DTASK is not set
+# CONFIG_SEC_DEBUG_PM_DEVICE_INFO is not set
+# CONFIG_SEC_DEBUG_TASK_IN_STATE_INFO is not set
+# CONFIG_SEC_DEBUG_SOFTDOG_PWDT is not set
+# CONFIG_SEC_DEBUG_SCHED_INFO is not set
+# CONFIG_SEC_DEBUG_WQ_LOCKUP_INFO is not set
+# CONFIG_SEC_DEBUG_SOFTDOG is not set
+# CONFIG_SEC_DEBUG_QSPIN_OWNER is not set
 # CONFIG_SEC_DUMP_SINK is not set
 # CONFIG_SEC_DEBUG_LOGBUF_IF is not set
-CONFIG_SEC_DEBUG_HANDLE_BAD_STACK=y
-CONFIG_SEC_DEBUG_STACKTRACE=m
-CONFIG_SEC_DEBUG_HARDLOCKUP_INFO=m
-CONFIG_SEC_DEBUG_EHLD_INFO=m
-CONFIG_SEC_DEBUG_COREDUMP=m
-CONFIG_SEC_DEBUG_SCHED_REPORT=m
+# CONFIG_SEC_DEBUG_HANDLE_BAD_STACK is not set
+# CONFIG_SEC_DEBUG_STACKTRACE is not set
+# CONFIG_SEC_DEBUG_HARDLOCKUP_INFO is not set
+# CONFIG_SEC_DEBUG_EHLD_INFO is not set
+# CONFIG_SEC_DEBUG_COREDUMP is not set
+# CONFIG_SEC_DEBUG_SCHED_REPORT is not set
 # CONFIG_SEC_DEBUG_DISABLE_DPRT is not set
 
 #
