configs: Disable Mali debugging

--- a/arch/arm64/configs/a33x_defconfig
+++ b/arch/arm64/configs/a33x_defconfig
@@ -4315,7 +4315,7 @@ CONFIG_MALI_EXYNOS_RTPM=y
 CONFIG_MALI_EXYNOS_QOS=y
 CONFIG_MALI_EXYNOS_THERMAL=y
 CONFIG_MALI_EXYNOS_BTS_MO=y
-CONFIG_MALI_EXYNOS_DEBUG=y
+# CONFIG_MALI_EXYNOS_DEBUG is not set
 CONFIG_MALI_EXYNOS_DEVICETREE=y
 # CONFIG_MALI_EXYNOS_LLC is not set
 CONFIG_MALI_EXYNOS_CL_BOOST=y
