--- a/crypto/Kconfig
+++ b/crypto/Kconfig
@@ -1830,6 +1830,15 @@ config CRYPTO_LZ4
 	help
 	  This is the LZ4 algorithm.
 
+config CRYPTO_LZ4FAST
+        tristate "LZ4FAST compression algorithm"
+        select CRYPTO_ALGAPI
+        select CRYPTO_ACOMP2
+        select LZ4_COMPRESS
+        select LZ4_DECOMPRESS
+        help
+          This is the LZ4 fast mode algorithm.
+
 config CRYPTO_LZ4HC
 	tristate "LZ4HC compression algorithm"
 	select CRYPTO_ALGAPI
