--- a/arch/arm64/configs/m33x_defconfig
+++ b/arch/arm64/configs/m33x_defconfig
@@ -174,7 +174,7 @@ CONFIG_SOCK_CGROUP_DATA=y
 CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
 CONFIG_TIME_NS=y
-# CONFIG_USER_NS is not set
+CONFIG_USER_NS=y
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
 CONFIG_SCHED_EMS=m
