--- a/arch/arm64/configs/a33x_defconfig
+++ b/arch/arm64/configs/a33x_defconfig
@@ -175,7 +175,7 @@ CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
 CONFIG_TIME_NS=y
 CONFIG_USER_NS=y
-# CONFIG_PID_NS is not set
+CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_SCHED_EMS=m
 CONFIG_SCHED_EMS_TUNE=y
