m33x: Import M336BXXS8EXE1

--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -53,6 +53,9 @@ dtbo-y += samsung/a53x/a53x_eur_open_w00_r06.dtbo
 dtbo-y += samsung/a53x/a53x_eur_open_w00_r05.dtbo
 dtbo-y += samsung/a53x/a53x_eur_open_w00_r01.dtbo
 dtbo-y += samsung/a53x/a53x_eur_open_w00_r02.dtbo
+dtbo-y += samsung/m33x/m33x_eur_open_w00_r01.dtbo
+dtbo-y += samsung/m33x/m33x_eur_open_w00_r02.dtbo
+dtbo-y += samsung/m33x/m33x_eur_open_w00_r00.dtbo
 dtb-y += qcom/msm8916-mtp.dtb
 dtb-y += qcom/msm8994-sony-xperia-kitakami-sumire.dtb
 dtb-y += qcom/sdm636-sony-xperia-ganges-mermaid.dtb
