--- a/drivers/muic/common/Makefile
+++ b/drivers/muic/common/Makefile
@@ -2,5 +2,5 @@
 # Makefile for muic devices
 #
 
-obj-$(CONFIG_CHARGER_S2MU106)	+= a33x/
-obj-$(CONFIG_CHARGER_SM5714)	+= a53x/
+obj-$(CONFIG_CHARGER_S2MU106)	+= s2mu106/
+obj-$(CONFIG_CHARGER_SM5714)	+= sm5714/
