--- a/drivers/sensors_lego/Kconfig
+++ b/drivers/sensors_lego/Kconfig
@@ -20,6 +20,42 @@ config SENSORS_ISG5320A_SUB
 	  This option enables grip sensors using
 	  IMAGIS ISG5320A_SUB device driver for grip sub.
 
+config SENSORS_ISG6320
+	depends on I2C
+	tristate "ISG6320 grip"
+	default n
+	help
+	  If you say yes here if you use ISG6320 for grip.
+	  This option enables grip sensors using
+	  IMAGIS ISG6320 device driver for grip.
+
+config SENSORS_ISG6320_SUB
+	depends on I2C
+	tristate "ISG6320 grip sub"
+	default n
+	help
+	  If you say yes here if you use ISG6320_SUB for grip sub.
+	  This option enables grip sensors using
+	  IMAGIS ISG6320_SUB device driver for grip sub.
+
+config SENSORS_ISG6320_SUB2
+	depends on I2C
+	tristate "ISG6320 grip sub2"
+	default n
+	help
+	  If you say yes here if you use ISG6320_SUB2 for grip sub2.
+	  This option enables grip sensors using
+	  IMAGIS ISG6320_SUB2 device driver for grip sub2.
+
+config SENSORS_ISG6320_WIFI
+	depends on I2C
+	tristate "ISG6320 grip wifi"
+	default n
+	help
+	  If you say yes here if you use ISG6320_WIFI for grip wifi.
+	  This option enables grip sensors using
+	  IMAGIS ISG6320_WIFI device driver for grip wifi.
+
 config SENSORS_SUPPORT_SLSI
 	tristate "Need to set if the driver is working based on Exynos Chip Set"
 	default n
@@ -42,11 +78,10 @@ config SENSORS_SUPPORT_MTK
 	  This option enable the feature that is related with Mediatek Chip Set.
 
 config SENSORS_CORE_AP
-	tristate "Grip sensor test"
+	tristate "Need to use Sensors core ap version"
 	default n
 	help
-	  Enable grip test
-	  This option enables logs or functions for grip test.
+	  Say Y here if you using sensors_core.c included under drivers/sensors etc.
 
 config TEST_FOR_GRIP
 	tristate "Grip sensor test"
@@ -63,6 +98,35 @@ config SENSORS_ISG5320A_USE_BFCAL
 	  This option allows some function to use bfcal instead of cfcal.
 
 
+config USE_MULTI_CHANNEL
+	tristate "Grip sensor multi chennel"
+	default n
+	help
+	  Enable grip multi channel
+	  This option enables feature that is related multi-Channel for grip Sensor.
+	  
+config UNSUPPORT_UNKNOWN_MODE
+	tristate "Unsupport unknown mode for specific regions"
+	default n
+	help
+	  This option disable grip unknown mode concept for specific project.
+
+config SUPPORT_MCC_THRESHOLD_CHANGE
+	depends on I2C
+	tristate "Change grip sensor threshold according to the MCC value"
+	default n
+	help
+	  Say Y here if you need to check mcc(mobile country code).
+	  This option enables when it is necessary to adjust the threshold
+	  according to the mcc value.
+	  Say N here if you do not need to check mcc.
+	  
+config SENSORS_SKIP_CABLE_RESET
+	tristate "skip grip reset when usb/ta/data cable attached"
+	default n
+	help
+	  new ANFR concept to skip grip reset  
+
 config SENSORS_DUMP_DATA
 	tristate "Grip sensor dump log"
 	default n
@@ -70,3 +134,14 @@ config SENSORS_DUMP_DATA
 	  Enable grip dump log data
 	  This option activates log output of grip error data using sensordump_notifier.
 
+config SENSORS_GRIP_FAILURE_DEBUG
+	bool "Grip failure debug"
+	help
+	  Say Y here, Enable Grip failure debug flag.
+
+config SENSORS_GRIP_SCANOFF
+	bool "Grip sensor low power sleep mode"
+	default n
+	help
+	  Scan off for low current consumption of the unused grip sensor.
+	  This option is for DM USA&CAN models, user binary.
