--- a/drivers/sensors_lego/Makefile
+++ b/drivers/sensors_lego/Makefile
@@ -4,4 +4,5 @@
 
 obj-$(CONFIG_SENSORS_ISG5320A)	    += isg5320a.o
 obj-$(CONFIG_SENSORS_ISG5320A_SUB)	+= isg5320a_sub.o
+obj-$(CONFIG_SENSORS_ISG6320)	    += isg6320.o
 
