--- a/drivers/battery/charger/sm5451_charger/sm5451_charger.dtsi
+++ b/drivers/battery/charger/sm5451_charger/sm5451_charger.dtsi
@@ -7,6 +7,7 @@
 	};
 };
 
+#if defined(CONFIG_SM5714_SUPPORT_SBU) || defined(CONFIG_CHARGER_S2MU106)
 /* /home/dpi/qb5_8814/workspace/P4_1716/android/kernel/kmodule/battery/suwon/charger/sm5451/sm5451_charger.a33x.dtsi */
 #ifdef CONFIG_CHARGER_S2MU106
 &hsi2c_5 {
@@ -24,3 +25,4 @@
 
 /* /home/dpi/qb5_8814/workspace/P4_1716/android/kernel/kmodule/battery/suwon/charger/sm5451/sm5451_charger.a33x.03.dtsi */
 /* From HWID03 refer to sm5451_charger.a33x.dtsi file */
+#endif
