m33x: Import M336BXXS8EXE1

--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -9,6 +9,9 @@ dtbo-y += samsung/a53x/a53x_eur_open_w00_r06.dtbo
 dtbo-y += samsung/a53x/a53x_eur_open_w00_r05.dtbo
 dtbo-y += samsung/a53x/a53x_eur_open_w00_r01.dtbo
 dtbo-y += samsung/a53x/a53x_eur_open_w00_r02.dtbo
+dtbo-y += samsung/m33x/m33x_eur_open_w00_r01.dtbo
+dtbo-y += samsung/m33x/m33x_eur_open_w00_r02.dtbo
+dtbo-y += samsung/m33x/m33x_eur_open_w00_r00.dtbo
 dtbo-y += exynos/board/erd/s5e8825-erd8825_r11.dtbo
 dtbo-y += exynos/board/erd/s5e8825-erd8825_r10.dtbo
 dtbo-y += exynos/board/erd/s5e8825-erd8825.dtbo
