m33x: Build novatek module explicitly for M33

--- a/drivers/gpu/drm/samsung/panel/tft_common/Makefile
+++ b/drivers/gpu/drm/samsung/panel/tft_common/Makefile
@@ -14,6 +14,6 @@ subdir-ccflags-$(CONFIG_SEC_KUNIT) += \
 
 
 mcd-panel-nt36672c_m33x_01-y += tft_common.o nt36672c_m33_01.o
-obj-m += mcd-panel-nt36672c_m33x_01.o
+obj-$(CONFIG_EXYNOS_DECON_LCD_TFT_M33) += mcd-panel-nt36672c_m33x_01.o
 mcd-panel-nt36672c_m33x_00-y += tft_common.o nt36672c_m33_00.o
-obj-m += mcd-panel-nt36672c_m33x_00.o
+obj-$(CONFIG_EXYNOS_DECON_LCD_TFT_M33) += mcd-panel-nt36672c_m33x_00.o
